SRM (0.5.3-1)

  # Bug Fixes

  * Addressed Nouveau bug failing to allocate buffers with GBM, thanks to @okcomput3 for reporting the issue.

  # Building

  * Replaced `<sys/poll.h>` include with `<poll.h>` to eliminate warning when building on musl-based distros.

  # Internal Changes

  * Removed unused and experimental code for parallelized buffer copy.
  * EGL and OpenGL extensions are now printed when using logging level >= 4.
  
-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sat, 24 Feb 2024 08:10:50 -0300


SRM (0.5.2-1)

  # Bug Fixes

  * Addressed bug in the atomic API causing issues with the refresh rate and hardware cursor plane updates, thanks to @2xsaiko for reporting the issue.
  
-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sun, 11 Feb 2024 00:36:48 -0300


SRM (0.5.1-1)

  # Bug Fixes

  * Correct debugging message that incorrectly announces the absence of gamma correction support when, in fact, it is supported.
  * Fix segmentation fault occurring during the uninitialization of multiple connectors using the DUMB rendering mode. This issue arises from the handling of a pending page flip event after the connectors have been uninitialized.
  
-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Thu, 08 Feb 2024 12:23:21 -0300


SRM (0.5.0-1)

  # New Features

  * Introduced srmConnectorGetSubPixel() to retrieve the subpixel layout of a connected display.
  * Added support for gamma correction through srmConnectorGetGammaSize() and srmConnectorSetGamma().
  * Introduced srmConnectorSetBufferDamageBoxes() to set connector damage using Pixman-style boxes.
  * Introduced new functions for vsync control: srmConnectorHasVSyncControlSupport(), srmConnectorIsVSyncEnabled(), and srmConnectorEnableVSync().
    Note: Support for the atomic DRM API requires Linux >= 6.8.
  * Added srmConnectorGetRefreshRateLimit() and srmConnectorSetRefreshRateLimit() functions to get and set the refresh rate limit of a connector when vsync is disabled.